--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h3>Recipes</h3>
-
+<h3 class="pink lighten-2">Recipes</h3>
+<div class="row">
+<p>Hello there</p>
+</div>
 {% endblock %}
