--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" 
+    crossorigin="anonymous" type="text/css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     {% block styles %}
     {% endblock %}
@@ -11,9 +12,9 @@
 </head>
 <body>
     <!-- Top Navbar -->
-    <nav class="amber darken-4">
+    <nav class="nav-extended amber darken-4">
     <div class="nav-wrapper">
-      <a href="#" class="brand-logo">Logo</a>
+      <a href="#" class="brand-logo">Recipe gather</a>
       <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="fas fa-bars">menu</i></a>
       <ul class="right hide-on-med-and-down">
         <li><a href="#">Welcome</a></li>
@@ -26,13 +27,22 @@
   </nav>
 <!-- Mobile Navbar -->
   <ul class="sidenav" id="mobile-demo">
+      <li><h4 class="center-align amber darken-4">Recipe gather</h4></li>
      <li><a href="#">Welcome</a></li>
         <li><a href="#">Register</a></li>
         <li><a href="#">Log In</a></li>
-        <li><a href="#">Recipes</a></li>
+        <li><a href="{{ url_for('get_recipes') }}">Recipes</a></li>
         <li><a href="#">Log out</a></li>
   </ul>
-    
+<main class="container">
+        {% block content %}
+        {% endblock %}
+</main>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"
+        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="{{ url_for('static', filename='js/script.js')}}"></script>
+        {% block script %}
+        {% endblock %}
 </body>
 </html>
