--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -1,8 +1,18 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h3 class="pink lighten-2">Recipes</h3>
-<div class="row">
-<p>Hello there</p>
-</div>
+
+  <div class="row">
+    <div class="col s12 m6">
+      <div class="card amber darken-4">
+        <div class="card-content white-text">
+          <span class="card-title">Card Title</span>
+          <p>I am a very simple card. I am good at containing small bits of information.
+          I am convenient because I require little markup to use effectively.</p>
+        </div>
+        
+      </div>
+    </div>
+  </div>
+
 {% endblock %}
