--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" 
     crossorigin="anonymous" type="text/css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css')}}">
     {% block styles %}
     {% endblock %}
     <title>Recipe gather</title>
@@ -17,7 +18,7 @@
       <a href="#" class="brand-logo">Recipe gather</a>
       <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="fas fa-bars">menu</i></a>
       <ul class="right hide-on-med-and-down">
-        <li><a href="#">Welcome</a></li>
+        <li><a href="{{ url_for('welcome') }}">Welcome</a></li>
         <li><a href="#">Register</a></li>
         <li><a href="#">Log In</a></li>
         <li><a href="{{ url_for('get_recipes') }}">Recipes</a></li>
@@ -28,7 +29,7 @@
 <!-- Mobile Navbar -->
   <ul class="sidenav" id="mobile-demo">
       <li><h4 class="center-align amber darken-4">Recipe gather</h4></li>
-     <li><a href="#">Welcome</a></li>
+     <li><a href="{{ url_for('welcome') }}">Welcome</a></li>
         <li><a href="#">Register</a></li>
         <li><a href="#">Log In</a></li>
         <li><a href="{{ url_for('get_recipes') }}">Recipes</a></li>
