Created register.html and fix changes

--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,7 @@
       <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="fas fa-bars">menu</i></a>
       <ul class="right hide-on-med-and-down">
         <li><a href="{{ url_for('welcome') }}">Welcome</a></li>
-        <li><a href="#">Register</a></li>
+        <li><a href="{{ url_for('register') }}">Register</a></li>
         <li><a href="#">Log In</a></li>
         <li><a href="{{ url_for('get_recipes') }}">Recipes</a></li>
         <li><a href="#">Log out</a></li>
@@ -30,7 +30,7 @@
   <ul class="sidenav" id="mobile-demo">
       <li><h4 class="center-align amber darken-4">Recipe gather</h4></li>
      <li><a href="{{ url_for('welcome') }}">Welcome</a></li>
-        <li><a href="#">Register</a></li>
+        <li><a href="{{ url_for('register') }}">Register</a></li>
         <li><a href="#">Log In</a></li>
         <li><a href="{{ url_for('get_recipes') }}">Recipes</a></li>
         <li><a href="#">Log out</a></li>
