--- a/templates/register.html
+++ b/templates/register.html
@@ -2,15 +2,21 @@
 {% block content %}
 
   <div class="row">
-    <form class="col s12">
+    <form class="col s12 m8" method="POST" action="{{ url_for('register') }}">
       <div class="row">
+
+        <!--Username-->
+
         <div class="input-field col s12">
-          <input placeholder="Placeholder" id="first_name" type="text" class="validate">
+          <input id="first_name" type="text" class="validate">
           <label for="first_name">User Name</label>
         </div>
+
+        <!--Password-->
+
         <div class="input-field col s12">
-          <input id="last_name" type="text" class="validate">
-          <label for="last_name">Password</label>
+          <input id="password" name="password" type="password" class="validate">
+          <label for="password">Password</label>
         </div>
       </div>
       <div class="row">
