--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,7 @@
     <title>Recipe gather</title>
 </head>
 <body>
+    <header>
     <!-- Top Navbar -->
     <nav class="nav-extended amber darken-4">
     <div class="nav-wrapper">
@@ -35,6 +36,19 @@
         <li><a href="{{ url_for('get_recipes') }}">Recipes</a></li>
         <li><a href="#">Log out</a></li>
   </ul>
+  </header>
+  <section>
+        <!--Flash messages-->
+        {% with messages = get_flashed_messages() %}
+            {% if messages %}
+                {% for message in messages %}
+                    <div class="row">
+                        <h2 class="amber darken-4 center-align">{{ message }}</h2>
+                    </div>
+                {% endfor %}
+            {% endif %}
+        {% endwith %}
+  </section>
 <main class="container">
         {% block content %}
         {% endblock %}
