Saw my errors and corrected it

--- a/templates/register.html
+++ b/templates/register.html
@@ -8,14 +8,14 @@
         <!--Username-->
 
         <div class="input-field col s12">
-          <input id="first_name" type="text" class="validate">
-          <label for="first_name">User Name</label>
+          <input id="username" name="username" type="text" class="validate" minlength="5" maxlength="20" pattern="[a-zA-Z0-9]{5,15}$" required>
+          <label for="username">User Name</label>
         </div>
 
         <!--Password-->
 
         <div class="input-field col s12">
-          <input id="password" name="password" type="password" class="validate">
+          <input id="password" name="password" type="password" class="validate" minlength="5" maxlength="20" pattern="[a-zA-Z0-9]{5,15}$" required>
           <label for="password">Password</label>
         </div>
       </div>
