Changed links for login

--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
       <ul class="right hide-on-med-and-down">
         <li><a href="{{ url_for('welcome') }}">Welcome</a></li>
         <li><a href="{{ url_for('register') }}">Register</a></li>
-        <li><a href="#">Log In</a></li>
+        <li><a href="{{ url_for('login') }}">Log In</a></li>
         <li><a href="{{ url_for('get_recipes') }}">Recipes</a></li>
         <li><a href="#">Log out</a></li>
       </ul>
@@ -32,7 +32,7 @@
       <li><h4 class="center-align amber darken-4">Recipe gather</h4></li>
      <li><a href="{{ url_for('welcome') }}">Welcome</a></li>
         <li><a href="{{ url_for('register') }}">Register</a></li>
-        <li><a href="#">Log In</a></li>
+        <li><a href="{{ url_for('login') }}">Log In</a></li>
         <li><a href="{{ url_for('get_recipes') }}">Recipes</a></li>
         <li><a href="#">Log out</a></li>
   </ul>
