Added form to login

--- a/templates/login.html
+++ b/templates/login.html
@@ -3,4 +3,30 @@
 
 <h1 class="center-align">Login page</h1>
 
+<div class="row">
+    <form class="col s12 m8 offset-m2" method="POST" action="{{ url_for('login') }}">
+        <div class="card-panel">
+      <div class="row">
+        <div class="input-field col s12">
+
+          <input id="username" name="username" type="text" class="validate" minlength="5" maxlength="20" pattern="[a-zA-Z0-9]{5,15}$" required>
+          <label for="username">Username</label>
+        </div>
+
+      </div>
+      <div class="row">
+        <div class="input-field col s12">
+          <input id="password" name="password" type="password" class="validate" minlength="5" maxlength="20" pattern="[a-zA-Z0-9]{5,15}$" required>
+          <label for="password">Password</label>
+        </div>
+      </div>
+      <div class="row">
+          <button class="btn waves-effect waves-light" type="submit" name="action">Submit
+    <i class="material-icons right"></i>
+  </button>
+      </div>
+      </div>
+    </form>
+  </div>
+
 {% endblock %}
