--- a/templates/register.html
+++ b/templates/register.html
@@ -2,14 +2,15 @@
 {% block content %}
 
   <div class="row">
-    <form class="col s12 m8" method="POST" action="{{ url_for('register') }}">
+    <form class="col s12 m8 offset-m2" method="POST" action="{{ url_for('register') }}">
+        <div class="card-panel">
       <div class="row">
 
         <!--Username-->
 
         <div class="input-field col s12">
           <input id="username" name="username" type="text" class="validate" minlength="5" maxlength="20" pattern="[a-zA-Z0-9]{5,15}$" required>
-          <label for="username">User Name</label>
+          <label for="username">Username</label>
         </div>
 
         <!--Password-->
@@ -21,8 +22,9 @@
       </div>
       <div class="row">
       <button class="btn waves-effect waves-light" type="submit" name="action">Submit
-    <i class="material-icons right">send</i>
+    <i class="material-icons right"></i>
   </button>
+</div>
 </div>
   </form>
   </div>
