--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -5,34 +5,49 @@
 
 <div class="row card-panel">
     <form class="col s12" method="POST" action="">
+    <div>
+    <div class="input-field col s12">
+    <select>
+      <option value="" disabled selected>Choose category</option>
+      {% for category in categories %}
+      <option value="{{ category.category_name }}">{{ category.category_name }}</option>
+      {% endfor %}
+    </select>
+    <label>Recipe category</label>
+  </div>
+    </div>
       <div class="row">
         <div class="input-field col s12">
-          <input id="recipe" name="recipe" type="text" class="validate">
+          <input id="recipe" name="recipe" type="text" minlength="5" maxlength="50" class="validate" required>
           <label for="recipe">recipe</label>
         </div>
         <div class="input-field col s12">
-          <input id="ingredients" name="ingredients" type="text" class="validate">
+          <input id="ingredients" name="ingredients" type="text" minlength="5" maxlength="200" class="validate" required>
           <label for="ingredients">ingredients</label>
         </div>
       </div>
-      <div class="row">
-        <div class="input-field col s12">
-          <input id="prep_time" name="prep_time" type="text" class="validate">
+      
+        <div class="input-field col s12 m6">
+          <input id="prep_time" name="prep_time" type="text" minlength="4" maxlength="20" class="validate" required>
           <label for="prep_time">Prep time</label>
         </div>
-      </div>
-      <div class="row">
-        <div class="input-field col s12">
-          <input id="cook_time" name="cook_time" type="text" class="validate">
+     
+      
+        <div class="input-field col s12 m6">
+          <input id="cook_time" name="cook_time" type="text" minlength="4" maxlength="20" class="validate" required>
           <label for="cook_time">Cook time</label>
-        </div>
+        
       </div>
       <div class="row">
         <div class="input-field col s12">
-          <input id="instructions" name="instructions" type="text" class="validate">
-          <label for="instructions">instructions</label>
+          <input id="intructions" name="intructions" type="text" minlength="10" maxlength="500" class="validate" required>
+          <label for="intructions">intructions</label>
         </div>
       </div>
+       <div class="row">
+          <button class="btn waves-effect waves-light" type="submit" name="action">Submit
+    <i class="material-icons right"></i>
+  </button>
     </form>
   </div>
 
