Added style to button

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,12 @@
 .text-color {
     color: #fafafa;
 }
+
+.btn-small {
+    margin: 7px;
+}
+
+.collapsible-header .col strong {
+    margin: 5px;
+    line-height: 42px;
+}
