--- a/templates/edit_recipe.html
+++ b/templates/edit_recipe.html
@@ -26,31 +26,32 @@
           <label for="recipe_name">recipe</label>
         </div>
         <div class="input-field col s12">
-          <input id="ingredients" name="ingredients" type="text" minlength="5" maxlength="200" class="validate" required>
+          <input id="ingredients" name="ingredients" type="text" minlength="5" maxlength="200" value="{{ recipe.ingredients }}" class="validate" required>
           <label for="ingredients">ingredients</label>
         </div>
       </div>
       
         <div class="input-field col s12 m6">
-          <input id="prep_time" name="prep_time" type="text" minlength="4" maxlength="20" class="validate" required>
+          <input id="prep_time" name="prep_time" type="text" minlength="4" maxlength="20" value="{{ recipe.prep_time }}" class="validate" required>
           <label for="prep_time">Prep time</label>
         </div>
      
       
         <div class="input-field col s12 m6">
-          <input id="cook_time" name="cook_time" type="text" minlength="4" maxlength="20" class="validate" required>
+          <input id="cook_time" name="cook_time" type="text" minlength="4" maxlength="20" value="{{ recipe.cook_time }}" class="validate" required>
           <label for="cook_time">Cook time</label>
         
       </div>
       <div class="row">
         <div class="input-field col s12">
-          <input id="intructions" name="intructions" type="text" minlength="10" maxlength="500" class="validate" required>
+          <input id="intructions" name="intructions" type="text" minlength="10" maxlength="500" value="{{ recipe.intructions }}" class="validate" required>
           <label for="intructions">intructions</label>
         </div>
       </div>
        <div class="row">
            <!--Cancel button-->
-           <a href="{{ url_for('get_recipes') }}" class="btn-large red">Cancel <i class="fas fa-times-circle"></i></a>
+           <a href="{{ url_for('get_recipes') }}" class="btn-large red">Cancel 
+               <i class="fas fa-times-circle"></i></a>
           <button class="btn waves-effect waves-light" type="submit" name="action">Edit Recipe
     <i class="fas fa-edit right"></i>
   </button>
