--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -10,8 +10,10 @@
             <div class="collapsible-header">
                 <div class="col s3">
             <i class="fas fa-caret-down"></i>
-            <a href="" class="btn-small green accent-3">Finished</a>
-            <a href="{{ url_for('edit_recipe', recipe_id=recipe._id)}}" class="btn-small deep-orange darken-1">Edit</a>
+            {% if session.user|lower == recipe.created_by|lower %}
+                <a href="" class="btn-small green accent-3">Finished</a>
+                <a href="{{ url_for('edit_recipe', recipe_id=recipe._id)}}" class="btn-small deep-orange darken-1">Edit</a>
+            {% endif %}
             <strong>{{ recipe.recipe_name }}</strong>
             </div>
             </div>
