--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -10,7 +10,9 @@
             <div class="collapsible-header">
                 <div class="col s3">
             <i class="fas fa-caret-down"></i>
-            {% if session.user|lower == recipe.created_by|lower %}
+            {% if session.user|lower == admin|lower %}
+                <a href="{{ url_for('del')}}"></a>
+            {% else session.user|lower == recipe.created_by|lower %}
                 <a href="" class="btn-small green accent-3">Finished</a>
                 <a href="{{ url_for('edit_recipe', recipe_id=recipe._id)}}" class="btn-small deep-orange darken-1">Edit</a>
             {% endif %}
