Added the link to categories

--- a/templates/base.html
+++ b/templates/base.html
@@ -23,6 +23,9 @@
         {% if session.user %}
         <li><a href="{{ url_for('get_recipes') }}">Recipes</a></li>
         <li><a href="{{ url_for('add_recipe') }}">Add Recipes</a></li>
+            {% if session.user|lower == "admin"|lower %}
+                <li><a href="{{ url_for('get_categories') }}">Manage Categories</a></li>
+            {% endif %}
         <li><a href="{{ url_for('logout') }}">Log out</a></li>
         {% else %}
         <li><a href="{{ url_for('register') }}">Register</a></li>
