--- a/templates/categories.html
+++ b/templates/categories.html
@@ -4,6 +4,14 @@
 <h3>Manage Categories</h3>
 
 <div class="row">
+    <div class="col s12 center-align">
+        <a href="{{ url_for('add_category') }}" class="btn-large yellow darken-4">Add Category <i class="fas fa-plus-square"></i></a>
+
+    </div>
+
+</div>
+
+<div class="row">
     {% for category in categories %}
     <div class="col s12 m3">
       <div class="card blue-grey darken-1">
