--- a/templates/categories.html
+++ b/templates/categories.html
@@ -20,7 +20,7 @@
         </div>
         <div class="card-action">
           <a href="{{ url_for('edit_category', category_id=category._id) }}" class="btn-small deep-orange darken-1">Edit</a>
-          <a href="#" class="btn-small red darken-2">Delete</a>
+          <a href="{{ url_for('delete_category', category_id=category._id) }}" class="btn-small red darken-2">Delete</a>
         </div>
       </div>
     </div>
