--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -3,6 +3,25 @@
 
     <h1 class="center-align">Recipes</h1>
 
+ <div class="row">
+    <form action="{{ url_for('search') }}" method="POST" class="col s12">
+      <div class="row">
+        <div class="input-field col s12 m6">
+          <i class="fas fa-search"></i>
+          <input type="text" name="query" id="query" minlength="3" class="validate">
+          <label for="query">Search recipe</label>
+        </div>
+        <div class="col s12 m4">
+            <a href="{{ url_for('get_recipes') }}" class="red btn">Reset</a>
+            <button type="submit" class="btn"><i class="fas fa-search"></i>
+                Search
+            </button>
+        </div>
+      </div>
+    </form>
+  </div>
+
+
     {% if recipes|length > 0 %}
 <ul class="collapsible">
         {% for recipe in recipes%}
