Added class for font-family

--- a/templates/base.html
+++ b/templates/base.html
@@ -15,9 +15,10 @@
     <header>
     <!-- Top Navbar -->
     <nav class="nav-extended amber darken-4">
-    <div class="nav-wrapper">
-      <a href="#" class="brand-logo">Recipe gather</a>
-      <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="fas fa-bars">menu</i></a>
+    <div class="nav-wrapper" id="recipe_navbar">
+      <a href="{{ url_for('welcome') }}" class="brand-logo">Recipe gather</a>
+      <i class="fas fa-utensils right"></i>
+      <a href="{{ url_for('welcome') }}" data-target="mobile-demo" class="sidenav-trigger"><i class="fas fa-bars">menu</i></a>
       <ul class="right hide-on-med-and-down">
         <li><a href="{{ url_for('welcome') }}">Welcome</a></li>
         {% if session.user %}
