--- a/templates/add_category.html
+++ b/templates/add_category.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h3>Add Category</h3>
+<h3 class="center-align header-site">Add Category</h3>
 
-  <div class="row card-panel yellow darken-4">
+  <div class="row card-panel">
  <form class="col s12" method="POST" action="{{ url_for('add_category') }}">
       <div class="row">
         <div class="input-field col s12">
