--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h3>Add a recipe</h3>
+<h3 class="center-align header-site">Add a recipe</h3>
     
 <div class="row card-panel">
     <form class="col s12" method="POST" action="">
