--- a/templates/categories.html
+++ b/templates/categories.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h3>Manage Categories</h3>
+<h3 class="center-align header-site">Manage Categories</h3>
 
 <div class="row">
     <div class="col s12 center-align">
@@ -14,12 +14,12 @@
 <div class="row">
     {% for category in categories %}
     <div class="col s12 m3">
-      <div class="card blue-grey darken-1">
+      <div class="card yellow darken-4">
         <div class="card-content white-text">
           <span class="card-title">{{ category.category_name }}</span>
         </div>
         <div class="card-action">
-          <a href="{{ url_for('edit_category', category_id=category._id) }}" class="btn-small deep-orange darken-1">Edit</a>
+          <a href="{{ url_for('edit_category', category_id=category._id) }}" class="btn-small teal darken-1">Edit</a>
           <a href="{{ url_for('delete_category', category_id=category._id) }}" class="btn-small red darken-2">Delete</a>
         </div>
       </div>
