--- a/templates/edit_recipe.html
+++ b/templates/edit_recipe.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h3>Edit recipe</h3>
+<h3 class="center-align header-site">Edit recipe</h3>
     
 <div class="row card-panel">
     <form class="col s12" method="POST" action="{{ url_for('edit_recipe', recipe_id=recipe._id) }}">
