--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -1,12 +1,12 @@
 {% extends "base.html" %}
 {% block content %}
 
-    <h1 class="center-align">Recipes</h1>
+    <h1 class="center-align header-site">Recipes</h1>
 
  <div class="row">
     <form action="{{ url_for('search') }}" method="POST" class="col s12">
       <div class="row">
-        <div class="input-field col s12 m6">
+        <div class="input-field col s12 m6 offset-m2">
           <i class="fas fa-search"></i>
           <input type="text" name="query" id="query" minlength="3" class="validate">
           <label for="query">Search recipe</label>
@@ -23,9 +23,11 @@
 
 
     {% if recipes|length > 0 %}
-<ul class="collapsible">
+    
+    <ul class="collapsible col s12 m6">
         {% for recipe in recipes%}
-            <li>
+        
+            <li class="card-panel">
             <div class="collapsible-header">
                 <div class="col s3">
             <i class="fas fa-caret-down"></i>
@@ -35,30 +37,33 @@
                 
                 <a href="{{ url_for('edit_recipe', recipe_id=recipe._id)}}" class="btn-small deep-orange darken-1">Edit</a>
             {% endif %}
-            <strong>{{ recipe.recipe_name }}</strong>
+            <strong class="header-site">{{ recipe.recipe_name }}</strong>
             </div>
             </div>
             <div class="collapsible-body">
                 <strong>{{ recipe.category_name }}</strong>
-            <p>
+            <p class="info-text">
                 {{ recipe.ingredients }}
             </p>
-            <p>
+            <p class="info-text">
                 {{ recipe.prep_time }}
             </p>
-            <p>
+            <p class="info-text">
                 {{ recipe.cook_time }}
             </p>
-            <p>
+            <p class="info-text">
                 {{ recipe.intructions }}
             </p>
       
-            <p><em>Recipe by: {{ recipe.created_by }}</em></p>
+            <p class="info-text"><em>Recipe by: {{ recipe.created_by }}</em></p>
             </div>
             </li>
-        
+      
         {% endfor %}
             </ul>
+           
+         
+            
     {% else %}
         <h3>No recipes found</h3>
     {% endif %}
