--- a/templates/register.html
+++ b/templates/register.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
 
+<h1 class="center-align header-site">Register Page</h1>
+
   <div class="row">
     <form class="col s12 m8 offset-m2" method="POST" action="{{ url_for('register') }}">
         <div class="card-panel">
