--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -1,14 +1,15 @@
 {% extends "base.html" %}
 {% block content %}
 
-<div class="row">
+
+<div class="row welcome-image center-align">
     <div class="col s12 center-align">
-<h1>Welcome to Recipe gather</h1>
+        <h1 class="header-site">Welcome to Recipe gather</h1>
 </div> 
-<div class="col s12 center-align">
-    <p>This site is to be able to gather all kind of recipe around the world 
-        and share it.
-    </p>
+    <div class="col s12 m8 offset-m2">
+        <p class="info-text">This site is created to gather all sorts of recipe that evryone can enjoy. It will be all gather in a book so more people can be
+            able to enjoy all kind of recipes. Be a part of it and add a recipe on our site and maybe your recipe will be selected for the book. 
+        </p>
 </div>
 </div>
 
