--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -45,7 +45,7 @@
         </div>
       </div>
        <div class="row">
-          <button class="btn waves-effect waves-light" type="submit" name="action">Submit
+          <button class="btn waves-effect waves-light green accent-4" type="submit" name="action">Submit
     <i class="material-icons right"></i>
   </button>
     </form>
