--- a/templates/categories.html
+++ b/templates/categories.html
@@ -19,7 +19,7 @@
           <span class="card-title">{{ category.category_name }}</span>
         </div>
         <div class="card-action">
-          <a href="{{ url_for('edit_category', category_id=category._id) }}" class="btn-small teal darken-1">Edit</a>
+          <a href="{{ url_for('edit_category', category_id=category._id) }}" class="btn-small green accent-4">Edit</a>
           <a href="{{ url_for('delete_category', category_id=category._id) }}" class="btn-small red darken-2">Delete</a>
         </div>
       </div>
