Tried make contact site working with js

--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,7 @@
     {% block styles %}
     {% endblock %}
     <title>Recipe gather</title>
+
 </head>
 <body>
     <header>
@@ -32,6 +33,7 @@
         <li><a href="{{ url_for('register') }}">Register</a></li>
         <li><a href="{{ url_for('login') }}">Log In</a></li>
         {% endif %}
+        <li><a href="{{ url_for('contact') }}">Contact</a></li>
       </ul>
     </div>
   </nav>
@@ -46,6 +48,7 @@
         <li><a href="{{ url_for('register') }}">Register</a></li>
         <li><a href="{{ url_for('login') }}">Log In</a></li>
         {% endif %}
+        <li><a href="{{ url_for('contact') }}">Contact</a></li>
   </ul>
   </header>
   <section>
