Failed with a picture

--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 
-<div class="row welcome-image center-align">
+<div class="row center-align">
     <div class="col s12 center-align">
         <h1 class="header-site">Welcome to Recipe gather</h1>
 </div> 
