--- a/templates/base.html
+++ b/templates/base.html
@@ -23,6 +23,7 @@
       <ul class="right hide-on-med-and-down">
         <li><a href="{{ url_for('welcome') }}">Welcome</a></li>
         {% if session.user %}
+        <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
         <li><a href="{{ url_for('get_recipes') }}">Recipes</a></li>
         <li><a href="{{ url_for('add_recipe') }}">Add Recipes</a></li>
             {% if session.user|lower == "admin"|lower %}
