--- a/templates/register.html
+++ b/templates/register.html
@@ -11,14 +11,21 @@
         <!--Username-->
 
         <div class="input-field col s12">
-          <input id="username" name="username" type="text" class="validate" minlength="5" maxlength="20" pattern="[a-zA-Z0-9]{5,15}$" required>
+          <input id="username" name="username" type="text" class="validate" minlength="5" maxlength="20" pattern="[a-zA-Z0-9]{5,20}$" required>
           <label for="username">Username</label>
+        </div>
+
+        <!--Email-->
+
+        <div class="input-field col s12">
+          <input id="email" name="email" type="text" class="validate" minlength="5" maxlength="20" pattern="[a-zA-Z0-9,.@]{5,20}$" required>
+          <label for="email">Email</label>
         </div>
 
         <!--Password-->
 
         <div class="input-field col s12">
-          <input id="password" name="password" type="password" class="validate" minlength="5" maxlength="20" pattern="[a-zA-Z0-9]{5,15}$" required>
+          <input id="password" name="password" type="password" class="validate" minlength="5" maxlength="20" pattern="[a-zA-Z0-9]{5,20}$" required>
           <label for="password">Password</label>
         </div>
       </div>
