--- a/templates/base.html
+++ b/templates/base.html
@@ -43,7 +43,12 @@
       <li><h4 class="center-align amber darken-4">Recipe gather</h4></li>
        <li><a href="{{ url_for('welcome') }}">Welcome</a></li>
         {% if session.user %}
+        <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
         <li><a href="{{ url_for('get_recipes') }}">Recipes</a></li>
+        <li><a href="{{ url_for('add_recipe') }}">Add Recipes</a></li>
+            {% if session.user|lower == "admin"|lower %}
+                <li><a href="{{ url_for('get_categories') }}">Manage Categories</a></li>
+            {% endif %}
         <li><a href="{{ url_for('logout') }}">Log out</a></li>
         {% else %}
         <li><a href="{{ url_for('register') }}">Register</a></li>
