--- a/templates/base.html
+++ b/templates/base.html
@@ -17,11 +17,11 @@
     <!-- Top Navbar -->
     <nav class="nav-extended amber darken-4">
     <div class="nav-wrapper" id="recipe_navbar">
-      <a href="{{ url_for('welcome') }}" class="brand-logo">Recipe gather</a>
-      <i class="fas fa-utensils right"></i>
-      <a href="{{ url_for('welcome') }}" data-target="mobile-demo" class="sidenav-trigger"><i class="fas fa-bars"></i></a>
+      <i class="fas fa-utensils left"></i>
+      <a href="{{ url_for('index') }}" class="brand-logo">Recipe gather</a>
+      <a href="{{ url_for('index') }}" data-target="mobile-demo" class="sidenav-trigger"><i class="fas fa-bars"></i></a>
       <ul class="right hide-on-med-and-down">
-        <li><a href="{{ url_for('welcome') }}">Welcome</a></li>
+        <li><a href="{{ url_for('index') }}">Home</a></li>
         {% if session.user %}
         <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
         <li><a href="{{ url_for('get_recipes') }}">Recipes</a></li>
@@ -41,7 +41,7 @@
 <!-- Mobile Navbar -->
   <ul class="sidenav" id="mobile-demo">
       <li><h4 class="center-align amber darken-4">Recipe gather</h4></li>
-       <li><a href="{{ url_for('welcome') }}">Welcome</a></li>
+       <li><a href="{{ url_for('index') }}">Home</a></li>
         {% if session.user %}
         <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
         <li><a href="{{ url_for('get_recipes') }}">Recipes</a></li>
