Change the edit button to save

--- a/templates/edit_recipe.html
+++ b/templates/edit_recipe.html
@@ -50,11 +50,11 @@
       </div>
        <div class="row">
            <!--Cancel button-->
-           <a href="{{ url_for('get_recipes') }}" class="btn-large red">Cancel 
-               <i class="fas fa-times-circle"></i></a>
-          <button class="btn waves-effect waves-light green accent-4" type="submit" name="action">Edit Recipe
-    <i class="fas fa-edit right"></i>
-  </button>
+          <button class="btn waves-effect waves-light green accent-4" type="submit" name="action">Save Recipe
+               </button>
+            <a href="{{ url_for('get_recipes') }}" class="btn waves-effect waves-light red accent-4">Cancel</a>
+    
+ 
     </form>
   </div>
 
