--- a/templates/edit_category.html
+++ b/templates/edit_category.html
@@ -14,7 +14,7 @@
       <div class="row">
           <div class="col s12 center-align">
             <button class="btn-large green accent-4">
-                Save Category   <i class="fas fa-plus-square"></i>
+                Save Category  
             </button>
           </div>
 
