--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -31,10 +31,8 @@
             <div class="collapsible-header">
                 <div class="col s3">
             <i class="fas fa-caret-down"></i>
-            {% if session.user|lower == "admin"|lower %}
-                <a href="{{ url_for('edit_recipe', recipe_id=recipe._id)}}" class="btn-small green accent-4">Edit</a>
-                <a href="{{ url_for('delete_recipe', recipe_id=recipe._id) }}" class="btn-small red darken-2">Delete</a>
-            {% elif session.user|lower == recipe.created_by|lower %}
+            
+            {% elif session.user|lower == recipe.created_by|lower or "admin|lower" %}
                 <a href="{{ url_for('edit_recipe', recipe_id=recipe._id)}}" class="btn-small green accent-4">Edit</a>
                 <a href="{{ url_for('delete_recipe', recipe_id=recipe._id) }}" class="btn-small red darken-2">Delete</a>
             {% endif %}
