--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -3,69 +3,46 @@
 
     <h1 class="center-align header-site">Recipes</h1>
 
- <div class="row">
-    <form action="{{ url_for('search') }}" method="POST" class="col s12">
-      <div class="row">
-        <div class="input-field col s12 m6 offset-m2">
-          <i class="fas fa-search"></i>
-          <input type="text" name="query" id="query" minlength="3" class="validate">
-          <label for="query">Search recipe</label>
-        </div>
-        <div class="col s12 m4">
-            <button type="submit" class="btn green accent-4"><i class="fas fa-search"></i>
-                Search
-            </button>
-            <a href="{{ url_for('get_recipes') }}" class="red btn">Reset</a>
-        </div>
-      </div>
-    </form>
-  </div>
-
-    
+  <div class="row">
     {% if recipes|length > 0 %}
-       <ul class="collapsible">
-    
         {% for recipe in recipes%}
-        
-            <li>
-            <div class="collapsible-header">
-                <div class="col s3">
-            <i class="fas fa-caret-down"></i>
-            
-            {% elif session.user|lower == recipe.created_by|lower or "admin|lower" %}
+    <div class="col s12 m6 l4">
+      <div class="card">
+          <a href="{{url_for('get_recipe', recipe_id=recipe._id)}}">
+        <div class="card-image">
+            <img src="{{ recipe.img_url }}">
+            <div>
+          <strong class="header-site">{{ recipe.recipe_name }}</strong>
+            </div>
+          <strong>{{ recipe.category_name }}</strong>
+        </div>
+        </a>
+        <div class="card-content">
+        <p class="info-text"><em>Recipe by: {{ recipe.created_by }}</em></p>
+            {% if session.user|lower == recipe.created_by|lower or "admin|lower" %}
                 <a href="{{ url_for('edit_recipe', recipe_id=recipe._id)}}" class="btn-small green accent-4">Edit</a>
-                <a href="{{ url_for('delete_recipe', recipe_id=recipe._id) }}" class="btn-small red darken-2">Delete</a>
+                <a class="waves-effect waves-light btn-small red darken-2 modal-trigger" href="#modal1">Delete</a>
             {% endif %}
-            <strong class="header-site">{{ recipe.recipe_name }}</strong>
+        </div>
+       
+      </div>
+    </div> 
+             <!-- Modal Structure -->
+            <div id="modal1" class="modal">
+                <div class="modal-content">
+                <h4>Are you sure you want to delete?</h4>
+                </div>
+                <div class="modal-footer">
+                <button type="button" class="btn-small green accent-4 modal-close" data-dismiss="modal1">Cancel</button>
+                <a href="{{ url_for('delete_recipe', recipe_id=recipe._id) }}" class="btn-small red darken-2">Delete</a>
+                </div>
             </div>
-            </div>
-            <div class="collapsible-body">
-                <strong>{{ recipe.category_name }}</strong>
-            <p class="info-text">
-                {{ recipe.ingredients }}
-            </p>
-            <p class="info-text">
-                {{ recipe.prep_time }}
-            </p>
-            <p class="info-text">
-                {{ recipe.cook_time }}
-            </p>
-            <p class="info-text">
-                {{ recipe.intructions }}
-            </p>
-      
-            <p class="info-text"><em>Recipe by: {{ recipe.created_by }}</em></p>
-            </div>
-            </li>
-     
         {% endfor %}
-          
-           
-          </ul>
-            
     {% else %}
         <h3>No recipes found</h3>
     
     {% endif %}
+  </div>
+     
 
 {% endblock %}
