--- a/templates/profile.html
+++ b/templates/profile.html
@@ -11,5 +11,34 @@
         </div>
     </div>
 
+<h1 class="center-align header-site">Recipes</h1>
 
+  <div class="row">
+    {% if recipes.count() %}
+        {% for recipe in recipes %}
+    <div class="col s12 m6 l4">
+      <div class="card">
+          <a href="{{url_for('get_recipe', recipe_id=recipe._id)}}">
+        <div class="card-image image-recipe">
+            <img src="{{ recipe.img_url }}">
+            </div>
+            <div>
+          <strong class="header-site">{{ recipe.recipe_name }}</strong>
+            </div>
+          <strong>{{ recipe.category_name }}</strong>
+        
+        </a>
+        <div class="card-content">
+        <p class="info-text"><em>Recipe by: {{ recipe.created_by }}</em></p>
+        </div>
+       
+      </div>
+    </div> 
+          {% endfor %}   
+        
+    {% else %}
+        <h3>No recipes found</h3>
+    
+    {% endif %}
+  </div>
 {% endblock %}
