--- a/templates/recipe.html
+++ b/templates/recipe.html
@@ -41,7 +41,16 @@
                 <a class="waves-effect waves-light btn-small red darken-2 modal-trigger" href="#modal1">Delete</a>
             {% endif %}
         </div>
-       
+       <!-- Modal Structure -->
+            <div id="modal1" class="modal">
+                <div class="modal-content">
+                <h4>Are you sure you want to delete?</h4>
+                </div>
+                <div class="modal-footer">
+                <button type="button" class="btn-small green accent-4 modal-close" data-dismiss="modal1">Cancel</button>
+                <a href="{{ url_for('delete_recipe', recipe_id=recipe._id) }}" class="btn-small red darken-2">Delete</a>
+                </div>
+            </div>
       </div>
     </div> 
 
