Smaller changes to fix up the sites

--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -43,6 +43,10 @@
           <input id="intructions" name="intructions" type="text" minlength="10" maxlength="500" class="validate" required>
           <label for="intructions">intructions</label>
         </div>
+        <div class="input-field col s12">
+          <input id="img_url" name="img_url" type="text" minlength="5" maxlength="200" class="validate" required>
+          <label for="img_url">Url link for image</label>
+        </div>
       </div>
        <div class="row">
           <button class="btn waves-effect waves-light green accent-4" type="submit" name="action">Submit
