--- a/templates/edit_recipe.html
+++ b/templates/edit_recipe.html
@@ -47,6 +47,10 @@
           <input id="intructions" name="intructions" type="text" minlength="10" maxlength="500" value="{{ recipe.intructions }}" class="validate" required>
           <label for="intructions">intructions</label>
         </div>
+        <div class="input-field col s12">
+          <input id="img_url" name="img_url" type="url" minlength="5" maxlength="200" value="{{ recipe.img_url }}" class="validate" required>
+          <label for="img_url">Url link for image</label>
+        </div>
       </div>
        <div class="row">
            <!--Cancel button-->
