--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -9,34 +9,22 @@
     <div class="col s12 m6 l4">
       <div class="card">
           <a href="{{url_for('get_recipe', recipe_id=recipe._id)}}">
-        <div class="card-image">
+        <div class="card-image image-recipe">
             <img src="{{ recipe.img_url }}">
+            </div>
             <div>
           <strong class="header-site">{{ recipe.recipe_name }}</strong>
             </div>
           <strong>{{ recipe.category_name }}</strong>
-        </div>
+        
         </a>
         <div class="card-content">
         <p class="info-text"><em>Recipe by: {{ recipe.created_by }}</em></p>
-            {% if session.user|lower == recipe.created_by|lower or "admin|lower" %}
-                <a href="{{ url_for('edit_recipe', recipe_id=recipe._id)}}" class="btn-small green accent-4">Edit</a>
-                <a class="waves-effect waves-light btn-small red darken-2 modal-trigger" href="#modal1">Delete</a>
-            {% endif %}
         </div>
        
       </div>
     </div> 
-             <!-- Modal Structure -->
-            <div id="modal1" class="modal">
-                <div class="modal-content">
-                <h4>Are you sure you want to delete?</h4>
-                </div>
-                <div class="modal-footer">
-                <button type="button" class="btn-small green accent-4 modal-close" data-dismiss="modal1">Cancel</button>
-                <a href="{{ url_for('delete_recipe', recipe_id=recipe._id) }}" class="btn-small red darken-2">Delete</a>
-                </div>
-            </div>
+             
         {% endfor %}
     {% else %}
         <h3>No recipes found</h3>
