Added model on contact.html

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -39,10 +39,17 @@
           <label for="question"></label>
         </div>
       </div>
-     
-      <input type="submit" value="Submit" class="btn green accent-4">
+        <input type="submit" value="Submit" class="btn green accent-4">
     </form>
   </div>
 
-          
+   <!-- Modal Structure -->
+  <div id="modal1" class="modal">
+    <div class="modal-content">
+      <h4 class="header-site">Contact form sent</h4>
+      <p class="info-text">Thank you for contacting us</p>
+    </div>
+    </div>
+  
+
 {% endblock %}
