--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,11 @@
 {% extends "base.html" %}
 {% block content %}
 
+<section>
+<div class="index-image">
 
-<div class="row center-align">
+
+<div class="row center-align text-color">
     <div class="col s12 center-align">
         <h1 class="header-site">Welcome to Recipe gather</h1>
 </div> 
@@ -13,7 +16,9 @@
 </div>
 </div>
 
+</div>
 
+</section>
 
 
 {% endblock %}
