--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,10 @@
 <section>
 <div class="index-image">
 
+    <!-- CREADIT TO THE CREATOR OF THE PICTURE
+                                        Becca Tapert 
+                                        kitchen
+                                        https://unsplash.com/photos/mDOGXiuVb4M -->
 
 <div class="row center-align text-color">
     <div class="col s12 center-align">
