Clean up the code

--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -16,6 +16,9 @@
     <label>Recipe category</label>
   </div>
     </div>
+
+    <!-- Adding for all information for recipe -->
+
       <div class="row">
         <div class="input-field col s12">
           <input id="recipe_name" name="recipe_name" type="text" minlength="5" maxlength="50" class="validate" required>
