--- a/templates/base.html
+++ b/templates/base.html
@@ -70,11 +70,17 @@
         {% endwith %}
   </section>
 <main class="container">
+
+        <!-- The content on the templates -->
+
         {% block content %}
         {% endblock %}
 
             
 </main>
+
+    <!-- Footer -->
+    
 <footer class="page-footer footer-recipe amber darken-4">
 <div class="container header-site">
     <div class="row">
