--- a/templates/edit_recipe.html
+++ b/templates/edit_recipe.html
@@ -17,6 +17,9 @@
         {% endif %}
     {% endfor %}
     </select>
+
+    <!-- Edit recipe -->
+
     <label>Recipe category</label>
   </div>
     </div>
