--- a/templates/login.html
+++ b/templates/login.html
@@ -3,6 +3,8 @@
 
 <h1 class="center-align header-site">Login page</h1>
 
+    <!-- Login with username and password -->
+
 <div class="row">
     <form class="col s12 m8 offset-m2" method="POST" action="{{ url_for('login') }}">
         <div class="card-panel">
