--- a/templates/profile.html
+++ b/templates/profile.html
@@ -13,6 +13,8 @@
 
 <h1 class="center-align header-site">Recipes</h1>
 
+        <!-- Profile showing ones recipes -->
+
   <div class="row">
     {% if recipes.count() %}
         {% for recipe in recipes %}
