--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,17 +1,17 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Arima+Madurai:wght@100;200;300;400;500;700;800;900&family=Mitr:wght@200;300;400;500;600;700&display=swap');
 
-.header-site {
-    font-family: 'mitr', sans-serif;
-}
-
 #recipe_navbar {
     padding-left: 2%;
     padding-right: 2%;
 }
-
+ /* Text for the recipes */
 .text-color {
     color: #fafafa;
+}
+
+.header-site {
+    font-family: 'mitr', sans-serif;
 }
 
 .info-text {
@@ -36,6 +36,8 @@
     display: flex;
 }
 
+/* Images */ 
+
 .index-image{
     background: url(https://images.unsplash.com/photo-1556909211-36987daf7b4d?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80) center no-repeat;
     background-size: cover;
@@ -59,6 +61,8 @@
     height: 100%;
     width: auto;
 }
+
+/* Footer */
 
 body {
     display: flex;
