--- a/templates/add_category.html
+++ b/templates/add_category.html
@@ -3,6 +3,8 @@
 
 <h3 class="center-align header-site">Add Category</h3>
 
+    <!-- Adding categories -->
+
   <div class="row card-panel">
  <form class="col s12" method="POST" action="{{ url_for('add_category') }}">
       <div class="row">
