--- a/templates/categories.html
+++ b/templates/categories.html
@@ -11,6 +11,8 @@
 
 </div>
 
+    <!-- All the categories -->
+
 <div class="row">
     {% for category in categories %}
     <div class="col s12 m3">
