--- a/templates/contact.html
+++ b/templates/contact.html
@@ -13,6 +13,8 @@
 
 <h1 class="center-align header-site">Contact form</h1>
 
+    <!-- Contact form -->
+
 <div class="row card-panel">
     <form class="col s12 m8 offset-m2" onsubmit="return sendMail(this);">
       <div class="row">
