--- a/templates/edit_category.html
+++ b/templates/edit_category.html
@@ -3,6 +3,8 @@
 
 <h3 class="center-align header-site">Edit Category</h3>
 
+    <!-- Edit of category -->
+
   <div class="row card-panel">
  <form class="col s12" method="POST" action="{{ url_for('edit_category', category_id=category._id) }}">
       <div class="row">
