--- a/templates/recipe.html
+++ b/templates/recipe.html
@@ -7,7 +7,7 @@
   <div class="row">
     <div class="col s12">
       <div class="card">
-          
+          <!-- Recipe card more information -->
         <div class="card-image">
             <img src="{{ recipe.img_url }}">
             <div>
