--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -8,7 +8,7 @@
         {% for recipe in recipes%}
     <div class="col s12 m6 l4">
       <div class="card">
-          
+          <!-- Recipes cards -->
           <a href="{{url_for('get_recipe', recipe_id=recipe._id)}}">
         <div class="recipe-card">
             <div class="card-image image-recipe">
