--- a/templates/edit_recipe.html
+++ b/templates/edit_recipe.html
@@ -61,7 +61,7 @@
                </button>
             <a href="{{ url_for('get_recipes') }}" class="btn waves-effect waves-light red accent-4">Cancel</a>
     
- 
+       </div>
     </form>
   </div>
 
