--- a/templates/index.html
+++ b/templates/index.html
@@ -2,23 +2,23 @@
 {% block content %}
 
 <section>
+   
+    <div class="row center-align text-color card grey lighten-1">
+    <div class="col s12 center-align">
+        <h1 class="header-site">Welcome to Recipe gather</h1>
+</div> 
+    <div class="col s12 m8 offset-m2">
+        <p class="index-text">This site is created to gather all sorts of recipe that evryone can enjoy. It will be all gather in a book so more people can be
+            able to enjoy all kind of recipes. Be a part of it and add a recipe on our site and maybe your recipe will be selected for the book. 
+        </p>
+</div>
+</div>
 <div class="index-image">
 
     <!-- CREADIT TO THE CREATOR OF THE PICTURE
                                         Becca Tapert 
                                         kitchen
                                         https://unsplash.com/photos/mDOGXiuVb4M -->
-
-<div class="row center-align text-color">
-    <div class="col s12 center-align">
-        <h1 class="header-site">Welcome to Recipe gather</h1>
-</div> 
-    <div class="col s12 m8 offset-m2">
-        <p class="info-text">This site is created to gather all sorts of recipe that evryone can enjoy. It will be all gather in a book so more people can be
-            able to enjoy all kind of recipes. Be a part of it and add a recipe on our site and maybe your recipe will be selected for the book. 
-        </p>
-</div>
-</div>
 
 </div>
 
