--- a/static/css/style.css
+++ b/static/css/style.css
@@ -10,6 +10,12 @@
     color: #fafafa;
 }
 
+.index-text {
+    color: #fafafa;
+    font-size: 20px;
+    font-family: 'Arima Madurai', cursive;
+}
+
 .header-site {
     font-family: 'mitr', sans-serif;
 }
@@ -21,6 +27,12 @@
 .recipe-text {
     padding-left: 10px;
     padding-top: 5px;
+}
+
+.recipe-text-card {
+    padding-left: 40px;
+    padding-top: 10px;
+    padding-bottom: 15px;
 }
 
 .btn-small {
@@ -41,7 +53,7 @@
 .index-image{
     background: url(https://images.unsplash.com/photo-1556909211-36987daf7b4d?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80) center no-repeat;
     background-size: cover;
-    padding-bottom: 400px;
+    padding-bottom: 600px;
     width: 100%;
     margin-top: 100px;
     margin-bottom: 5%;
