--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -21,38 +21,36 @@
 
       <div class="row">
         <div class="input-field col s12">
-          <input id="recipe_name" name="recipe_name" type="text" minlength="5" maxlength="50" class="validate" required>
-          <label for="recipe_name">recipe</label>
+          <textarea id="recipe_name" name="recipe_name" minlength="5" maxlength="50" class="validate" required>
+          </textarea>
+        <label for="recipe_name">Recipe Name</label>
         </div>
         <div class="input-field col s12">
-          <input id="ingredients" name="ingredients" type="text" minlength="5" maxlength="200" class="validate" required>
-          <label for="ingredients">ingredients</label>
+          <textarea id="ingredients" name="ingredients" minlength="5" maxlength="500" class="validate recipe-area materialize-textarea" required>
+          </textarea>
+        <label for="ingredients">Ingredients</label>
         </div>
       </div>
       
         <div class="input-field col s12 m6">
-          <input id="prep_time" name="prep_time" type="text" minlength="4" maxlength="20" class="validate" required>
-          <label for="prep_time">Prep time</label>
+          <textarea id="prep_time" name="prep_time" minlength="4" maxlength="20" class="validate" required>
+          </textarea>
+            <label for="prep_time">Prep time</label>
         </div>
-     
-      
         <div class="input-field col s12 m6">
-          <input id="cook_time" name="cook_time" type="text" minlength="4" maxlength="20" class="validate" required>
-          <label for="cook_time">Cook time</label>
-        
+          <textarea id="cook_time" name="cook_time" minlength="4" maxlength="20" class="validate" required>
+          </textarea>
+            <label for="cook_time">Cook time</label>
       </div>
       <div class="row">
-        <div class="input-field col s12">
-          <input id="intructions" name="intructions" type="text" minlength="10" maxlength="500" class="validate" required>
-          <label for="intructions">intructions</label>
+       <div class="input-field col s12">
+          <textarea id="intructions" name="intructions" minlength="10" maxlength="900" class="validate materialize-textarea recipe-area" required>
+          </textarea><label for="intructions">Intructions</label>
         </div>
         <div class="input-field col s12">
-          <input id="img_url" name="img_url" type="text" minlength="5" maxlength="200" class="validate" required>
+          <textarea id="img_url" name="img_url" minlength="5" maxlength="200" class="validate materialize-textarea recipe-area" required>
+          </textarea>
           <label for="img_url">Url link for image</label>
-        </div>
-        <div class="input-field col s12">
-          <input id="img_des" name="img_des" type="text" minlength="5" maxlength="40" class="validate" required>
-          <label for="img_des">Image description</label>
         </div>
       </div>
        <div class="row">
