--- a/templates/categories.html
+++ b/templates/categories.html
@@ -22,16 +22,23 @@
         </div>
         <div class="card-action">
           <a href="{{ url_for('edit_category', category_id=category._id) }}" class="btn-small green accent-4">Edit</a>
+          <a class="waves-effect waves-light btn-small red darken-2 modal-trigger" href="#a{{ category._id }}">Delete</a>
         </div>
       </div>
     </div>
 
-
-
-
+ <!-- Modal Structure -->
+      <div id="a{{ category._id }}" class="modal">
+    <div class="modal-content">
+      <h4>Are you sure you want to delete?</h4>
+    </div>
+    <div class="modal-footer">
+    <button type="button" class="btn-small green accent-4 modal-close" data-dismiss="a{{ category._id }}">Cancel</button>   
+    <a href="{{ url_for('delete_category', category_id=category._id) }}" class="btn-small red darken-2">Delete</a>
+    </div>
+  </div>
     {% endfor %}
 
-  
-
+ 
 
 {% endblock %}
