--- a/templates/contact.html
+++ b/templates/contact.html
@@ -29,15 +29,13 @@
       </div>
       <div class="row">
         <div class="input-field col s12">
-            <i class="fas fa-envelope"></i>
-          <input id="email" name="email" type="email" class="form-control">
-          <label for="email">Email</label>
+          <input id="email" name="email" type="email" class="form-control" required>
+         <label for="email">Email</label>
         </div>
       </div>
       <div class="row">
         <div class="input-field col s12">
-          <i class="fas fa-pen"></i>
-          <textarea placeholder="Question" name="question" id="question" class="materialize-textarea"></textarea>
+          <textarea placeholder="Question" name="question" id="question" class="materialize-textarea recipe-area" required></textarea>
           <label for="question"></label>
         </div>
       </div>
