--- a/templates/edit_recipe.html
+++ b/templates/edit_recipe.html
@@ -25,36 +25,40 @@
     </div>
       <div class="row">
         <div class="input-field col s12">
-          <input id="recipe_name" name="recipe_name" type="text" minlength="5" maxlength="50" value="{{ recipe.recipe_name }}" class="validate" required>
-          <label for="recipe_name">recipe</label>
+          <textarea id="recipe_name" name="recipe_name" type="text" minlength="5" maxlength="50" value="{{ recipe.recipe_name }}" class="validate" required>
+          </textarea>
+            <label for="recipe_name">Recipe Name</label>
         </div>
         <div class="input-field col s12">
-          <input id="ingredients" name="ingredients" type="text" minlength="5" maxlength="200" value="{{ recipe.ingredients }}" class="validate" required>
-          <label for="ingredients">ingredients</label>
+          <textarea id="ingredients" name="ingredients" type="text" minlength="5" maxlength="500" value="{{ recipe.ingredients }}" class="validate materialize-textarea recipe-area" required>
+          </textarea>
+            <label for="ingredients">Ingredients</label>
         </div>
       </div>
       
         <div class="input-field col s12 m6">
-          <input id="prep_time" name="prep_time" type="text" minlength="4" maxlength="20" value="{{ recipe.prep_time }}" class="validate" required>
-          <label for="prep_time">Prep time</label>
+          <textarea id="prep_time" name="prep_time" type="text" minlength="4" maxlength="20" value="{{ recipe.prep_time }}" class="validate" required>
+          </textarea>
+            <label for="prep_time">Prep time</label>
         </div>
-     
-      
         <div class="input-field col s12 m6">
-          <input id="cook_time" name="cook_time" type="text" minlength="4" maxlength="20" value="{{ recipe.cook_time }}" class="validate" required>
-          <label for="cook_time">Cook time</label>
+          <textarea id="cook_time" name="cook_time" type="text" minlength="4" maxlength="20" value="{{ recipe.cook_time }}" class="validate" required>
+          </textarea>
+            <label for="cook_time">Cook time</label>
         
       </div>
       <div class="row">
         <div class="input-field col s12">
-          <input id="intructions" name="intructions" type="text" minlength="10" maxlength="500" value="{{ recipe.intructions }}" class="validate" required>
-          <label for="intructions">intructions</label>
-        </div>
+          <textarea id="intructions" name="intructions" minlength="10" maxlength="900" value="{{ recipe.intructions }}" class="validate materialize-textarea recipe-area" required>
+          </textarea>
+        <label for="intructions">intructions</label>
+        </div></div>
         <div class="input-field col s12">
-          <input id="img_url" name="img_url" type="url" minlength="5" maxlength="200" value="{{ recipe.img_url }}" class="validate" required>
-          <label for="img_url">Url link for image</label>
+          <textarea id="img_url" name="img_url" type="url" minlength="5" maxlength="200" value="{{ recipe.img_url }}" class="validate materialize-textarea recipe-area" required>
+          </textarea>
+        <label for="img_url">Url link for image</label>
         </div>
-      </div>
+
        <div class="row">
            <!--Cancel button-->
           <button class="btn waves-effect waves-light green accent-4" type="submit" name="action">Save Recipe
